--- a/confs/logging.properties
+++ b/confs/logging.properties
@@ -42,6 +42,20 @@ java.util.logging.ConsoleHandler.level = FINE
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 
+###########################################################
+# kripp/docker-tomcat7 custom
+###########################################################
+1catalina.org.apache.juli.FileHandler.rotatable = false
+2localhost.org.apache.juli.FileHandler.rotatable = false
+3manager.org.apache.juli.FileHandler.rotatable = false
+4host-manager.org.apache.juli.FileHandler.rotatable = false
+
+1catalina.org.apache.juli.FileHandler.suffix = log
+2localhost.org.apache.juli.FileHandler.suffix = log
+3manager.org.apache.juli.FileHandler.suffix = log
+4host-manager.org.apache.juli.FileHandler.suffix = log
+
+
 ############################################################
 # Facility specific properties.
 # Provides extra control for each logger.
